# rust-zerotoprod-email-newsletter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: health_check.rs
