[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Eduardo Stuart <stuart.eduardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.5"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
